log
Tue 07 May 2024 02:58:32 PM UTC: 
 tests:  1|8
total_score: 0/70
c5d4496
Tue 07 May 2024 03:12:16 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|8
total_score: 0/70
2d9d601
Tue 07 May 2024 03:12:28 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
c188b0c
Tue 07 May 2024 03:17:45 PM UTC: 
 treemap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  4|7
total_score: 5/70
9ac8e95
Tue 07 May 2024 03:18:37 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:94:1: error: control reaches end of non-void function [-Werror=return-type]
   94 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
600f655
Tue 07 May 2024 03:24:06 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:94:1: error: control reaches end of non-void function [-Werror=return-type]
   94 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3de95da
Tue 07 May 2024 03:24:50 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|7
total_score: 5/70
23cd9bd
Tue 07 May 2024 03:25:55 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
56b8c76
Tue 07 May 2024 03:27:30 PM UTC: 
 treemap.c | 19 ++++++++-----------
 1 file changed, 8 insertions(+), 11 deletions(-)
 tests:  0|0
a813d3e
Tue 07 May 2024 03:28:35 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
769f15e
Tue 07 May 2024 03:29:10 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
03ba206
Tue 07 May 2024 03:41:22 PM UTC: 
 treemap.c | 26 ++++++++++++++++++++++++++
 1 file changed, 26 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:59:20: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   59 |         TreeNode * parent = NULL;
      |                    ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
4ecd6bc
Tue 07 May 2024 03:43:14 PM UTC: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  12|6
total_score: 15/70
6b61609
Tue 07 May 2024 03:46:08 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  12|6
total_score: 15/70
c1d1118
Tue 07 May 2024 03:47:17 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  12|6
total_score: 15/70
9fd6d47
Tue 07 May 2024 03:52:19 PM UTC: 
 treemap.c | 16 ++++++++++++----
 1 file changed, 12 insertions(+), 4 deletions(-)
 tests:  13|5
total_score: 25/70
7d44570
Tue 07 May 2024 03:53:51 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
06a30d7
Tue 07 May 2024 03:54:26 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
05b25e1
Tue 07 May 2024 03:54:43 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
1f278f6
Tue 07 May 2024 04:09:19 PM UTC: 
 treemap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
test.c: In function ‘removeNode’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
efd12f0
Tue 07 May 2024 04:11:32 PM UTC: 
 treemap.c | 13 -------------
 1 file changed, 13 deletions(-)
test.c: In function ‘removeNode’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
c8764cd
Tue 07 May 2024 04:12:31 PM UTC: 
 treemap.c | 24 +++++++++++++-----------
 1 file changed, 13 insertions(+), 11 deletions(-)
 tests:  15|4
total_score: 25/70
900dc33
Tue 07 May 2024 04:35:48 PM UTC: 
 treemap.c | 49 ++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 48 insertions(+), 1 deletion(-)
 tests:  18|3
total_score: 40/70
30431be
Tue 07 May 2024 04:44:21 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
2c294c0
Tue 07 May 2024 04:49:33 PM UTC: 
 treemap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  0|0
2f76274
Tue 07 May 2024 04:50:10 PM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  20|2
total_score: 45/70
e9c3136
Tue 07 May 2024 04:51:04 PM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
f654bfe
Tue 07 May 2024 04:51:26 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  22|2
total_score: 50/70
cc4b016
Tue 07 May 2024 04:57:20 PM UTC: 
 treemap.c | 13 +++++++++----
 1 file changed, 9 insertions(+), 4 deletions(-)
 tests:  25|1
total_score: 60/70
1667246
Tue 07 May 2024 05:27:00 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  24|2
total_score: 50/70
caac217
Tue 07 May 2024 05:27:46 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  25|1
total_score: 60/70
5a803e7
Tue 07 May 2024 10:49:12 PM UTC: 
 treemap.c | 15 ---------------
 1 file changed, 15 deletions(-)
 tests:  25|1
total_score: 60/70
436c54f
Tue 07 May 2024 10:52:15 PM UTC: 
 treemap.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  26|1
total_score: 60/70
5fc58e7
Tue 07 May 2024 10:53:11 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  26|1
total_score: 60/70
da965d6
Tue 07 May 2024 10:54:28 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  26|1
total_score: 60/70
07f20a8
Tue 07 May 2024 10:55:05 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4eed3c5
Tue 07 May 2024 10:55:35 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ee1f6ce
Tue 07 May 2024 10:57:30 PM UTC: 
 treemap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  25|1
total_score: 60/70
ca33a2c
Tue 07 May 2024 10:59:25 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
587690a
Tue 07 May 2024 10:59:52 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  29|0
total_score: 70/70
84146c3
Tue 07 May 2024 11:02:42 PM UTC: 
 treemap.c | 24 ++++++++----------------
 1 file changed, 8 insertions(+), 16 deletions(-)
 tests:  29|0
total_score: 70/70
b770c08
